# rustTorrentClient

./: .gitignore  Cargo.toml  README.md  bencode.rs  download_manager.rs  error.rs  handshake.rs  main.rs  message.rs  peer.rs  piece.rs  torrent.rs  tracker.rs
resources/: Books.torrent  Red_Hot_Chili_Peppers.torrent  archlinux-2025.07.01-x86_64.iso.torrent  meta_version_2.torrent
src/: bencode.rs  constants.rs  error.rs  hash.rs  lib.rs  tracker.rs
src/disk/: mod.rs
src/disk/layout/: files.rs  layout.rs  mod.rs  singlefile.rs  tree.rs
src/metadata/: fileinfo.rs  filetree.rs  info.rs  metadata.rs  mod.rs
src/peer/: conn.rs  manager.rs  mod.rs  peer.rs  protocol.rs  util.rs
src/peer/message/: bitfield.rs  constants.rs  handshake.rs  message.rs  mod.rs  piece.rs  request.rs
src/peers/: client.rs  conn.rs  mod.rs  peer.rs
src/proto/: bep15.rs  bep15conn.rs  bitfield.rs  constants.rs  handshake.rs  magnet.rs  message.rs  mod.rs  peerid.rs  piece.rs  request.rs
src/proto/announce/: builder.rs  event.rs  mod.rs  request.rs  response.rs
src/proto/bep10/: exhandshake.rs  exmessage.rs  mod.rs
src/proto/dht/: krpc.rs  mod.rs  query.rs  response.rs
src/session/: alert.rs  command.rs  mod.rs  redirect.rs  router.rs  session.rs  state.rs
src/storage/: mod.rs  piece.rs  pieces.rs
src/torrent/: mod.rs  source.rs  torrent.rs  tracker.rs
src/tracker/: client.rs  event.rs  mod.rs  request.rs  response.rs  tracker.rs
src/types/: mod.rs  peerid.rs
src/util/: context.rs  mod.rs  time.rs  urlencoding.rs
tests/: disk.rs  proto.rs  tmp.rs  torrent.rs
(+36 files in other folders)
