[package]
name = "torrent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha1 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
urlencoding = "2.1"
percent-encoding = "2.1"
url = "2.2"