[package]
name = "rutor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
reqwest = "0.12"
thiserror = "2"
rand = "0.9"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
