[package]
name = "rutor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
thiserror = "2"
rand = "0.9"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base32 = "0.5"
